[tool.poetry]
name = "yank"
version = "0.1.0"
description = "A high-level web scraping utility kit for Python 3 and above"
authors = ["khunspoonzi <khunspoonzi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
