[tool.poetry]
name = "yank"
version = "0.1.0"
description = "A high-level web scraping utility kit for Python 3 and above"
authors = ["khunspoonzi <khunspoonzi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
arrow = "^1.1.0"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"
python = "^3.6.1"
requests = "^2.25.1"
selenium = "^3.141.0"
selenium-wire = "^4.2.4"
SQLAlchemy = "^1.4.11"
tldextract = "^3.1.0"
undetected-chromedriver = "^2.2.1"
webdriver-manager = "^3.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
